# mpc-backend-mock

./: .envrc  .gitignore  AUTHENTICATION.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  config.yaml  fix-introspect.md  flake.nix  plan.md  refactor-user-management-service.md  reset.sh  run.sh  sample.sh  taplo.toml  treefmt.toml
crates/cli-common/: Cargo.toml
crates/cli-common/src/config/: log.rs  mod.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: lib.rs  server.rs
crates/notification/: Cargo.toml  README.md
crates/notification/examples/: send_activation_email.rs
crates/notification/src/: error.rs  gmail.rs  lib.rs
crates/protobuf-types/: Cargo.toml  build.rs
crates/protobuf-types/proto/: health_check.proto
crates/protobuf-types/src/: health_check.rs
crates/web/: Cargo.toml
crates/web/src/: lib.rs  response.rs
dev-support/: codespell-ignore
dev-support/containers/: docker-bake.hcl
dev-support/containers/ubuntu/: Containerfile
dev-support/test-environments/: olympus.yaml
dev-support/test-environments/docker-compose/: .gitignore  ARCHITECTURE.md  KEYCLOAK_SETUP.md  README.md  docker-compose.keycloak.yml  docker-compose.pgonly.yml  docker-compose.yaml  electrs-config.toml  setup-keycloak.sh
devshell/: default.nix  format.nix
mpc-backend-mock/core/: Cargo.toml
mpc-backend-mock/core/src/: config.rs  error.rs  lib.rs
mpc-backend-mock/core/src/model/: mod.rs
mpc-backend-mock/server/: Cargo.toml
mpc-backend-mock/server/.sqlx/: query-48a0dd10ce6932c2a62f0c09ad943a3464d0b8046abe0d14327e130b77e08ec3.json  query-622d4204c52296c72ce3c4c36f87af5061df41fb3d01eab915e9df7534aac19f.json  query-6465c51fc8dcaa6c43758a6395e177daa35652eb0f0c09ad0a0f3ac5045ecfb5.json  query-713e6b1d0cfdeaa8c2a462a87407a7121b6cbde2bbd5608a4667ae3016e5fbff.json  query-c33b71df68b6c871d01351b71face15fedf95f1cbbcd193cf61204b63cb8b079.json
mpc-backend-mock/server/migrations/: 20260105103845_init-db.down.sql  20260105103845_init-db.up.sql
mpc-backend-mock/server/sql/: readme.md
mpc-backend-mock/server/sql/user/: delete_user_by_id.sql  get_user_by_email.sql  get_user_by_id.sql  get_user_by_keycloak_id.sql  insert_user.sql
mpc-backend-mock/server/src/: error.rs  lib.rs
mpc-backend-mock/server/src/entity/: mod.rs  user.rs
mpc-backend-mock/server/src/grpc/: health_check.rs  mod.rs
mpc-backend-mock/server/src/keycloak_client/: error.rs  mod.rs
mpc-backend-mock/server/src/service/: error.rs  mod.rs  user_management.rs
mpc-backend-mock/server/src/service/sql_executor/: mod.rs  user.rs
mpc-backend-mock/server/src/web/: error.rs  extractor.rs  mod.rs
mpc-backend-mock/server/src/web/controller/: error.rs  mod.rs  user.rs
mpc-backend-mock/server/src/web/middleware/: auth.rs  jwks.rs  mod.rs
mpc-backend-mock/server/tests/: jwt_auth_test.rs  user_api_test.rs
