[workspace.package]
version      = "0.1.0"
authors      = ["zeusnetwork <contact@zeusnetwork.xyz>"]
homepage     = "https://zeusnetwork.xyz/"
repository   = "https://github.com/polarjack/mpc-backend-mock"
readme       = "README.md"
license      = "GPL-3.0-only"
edition      = "2021"
rust-version = "1.87"
description  = "mpc backend mock"
categories   = ["blockchain"]
keywords     = ["blockchain", "bitcoin", "solana"]
publish      = false

[workspace]
resolver = "2"
members = [
  "crates/cli-common",
  "crates/protobuf-types",
  "crates/metrics",
  "crates/web",

  "mpc-backend-mock/bin",
  "mpc-backend-mock/core",
  "mpc-backend-mock/server",
]

[workspace.dependencies]
# serialization / deserialization
base64     = "0.22"
http-serde = "2"
serde      = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
serde_with = { version = "3", features = ["hex", "macros", "std"] }
serde_yaml = "0.9"

# logger
tracing            = "0.1"
tracing-journald   = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# async-io related
async-trait  = "0.1"
futures      = "0.3"
sigfinn      = "0.2"
tokio        = { version = "1", features = ["fs", "macros", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-util   = "0.7"

# HTTP
axum = { version = "0.7", features = ["multipart"] }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "stream",
  "rustls-tls",
] }
tower = { version = "0.4", features = ["timeout"] }
tower-http = { version = "0.5", features = [
  "auth",
  "compression-br",
  "cors",
  "normalize-path",
  "trace",
  "validate-request",
] }

# gRPC
prost       = "0.12"
prost-build = "0.12"
prost-types = "0.12"
tonic       = { version = "0.11", features = ["gzip"] }
tonic-build = { version = "0.11", default-features = false, features = ["prost", "transport"] }

# persistent storage
sqlx = { version = "0.8", default-features = false }

# blockchain
eris-bitcoin-ext                       = { git = "ssh://git@github.com/ZeusNetworkHQ/eris.git", tag = "v0.3.6", package = "eris-bitcoin-ext" }
eris-bitcoin-rpc-client                = { git = "ssh://git@github.com/ZeusNetworkHQ/eris.git", tag = "v0.3.6", package = "eris-bitcoin-rpc-client" }
logos-p2tr                             = { git = "ssh://git@github.com/ZeusNetworkHQ/logos.git", tag = "v0.2.6", package = "logos-p2tr" }
logos-transaction                      = { git = "ssh://git@github.com/ZeusNetworkHQ/logos.git", tag = "v0.2.6", package = "logos-transaction" }
orca_whirlpools_client                 = "3.0.0"
solana-account-decoder-client-types    = "2.3.2"
solana-client                          = "2.3.2"
solana-sdk                             = "2.3.1"
solana-transaction-status-client-types = "2.3.2"
spl-associated-token-account           = "6.0.0"
spl-token                              = "8.0.0"
spl-token-2022                         = "9.0.0"
zpl-bitcoin-spv                        = { git = "ssh://git@github.com/ZeusNetworkHQ/zeus-program-library.git", rev = "42f7461", package = "zpl-bitcoin-spv" }
zpl-rpc-client                         = { git = "ssh://git@github.com/ZeusNetworkHQ/zeus-program-library.git", rev = "42f7461", package = "zpl-rpc-client" }
zpl-two-way-peg                        = { git = "ssh://git@github.com/ZeusNetworkHQ/zeus-program-library.git", rev = "42f7461", package = "zpl-two-way-peg" }
zpl-two-way-peg-rpc-client             = { git = "ssh://git@github.com/ZeusNetworkHQ/zeus-program-library.git", rev = "42f7461", package = "zpl-two-way-peg-rpc-client" }

# misc
argon2             = "0.5"
bigdecimal         = { version = "0.4", features = ["serde", "serde_json"] }
borsh              = "1.0"
bytes              = "1"
chrono             = { version = "0.4", features = ["serde"] }
clap               = { version = "4", default-features = false, features = ["std"] }
clap_complete      = "4"
csv                = "1"
directories        = "5"
exitcode           = "1"
foyer              = "0.15"
google-cloud-auth  = "0.17"
google-cloud-token = "0.1"
hex                = "0.4"
hex-literal        = "0.4"
http               = "1"
indexmap           = { version = "2", features = ["serde"] }
jsonwebtoken       = "9"
keycloak           = { version = "~26.4" }
libc               = "0.2"
mime               = "0.3"
prometheus         = "0.13"
rand               = "0.8"
rand_distr         = "0.4"
resolve-path       = "0.1"
semver             = "1"
sha2               = "0.10"
shadow-rs          = "0.27"
snafu              = "0.8"
time               = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
urlencoding        = "2"
utoipa             = { version = "5", default-features = false }
uuid               = { version = "1", default-features = false, features = ["std"] }

# crates of this project
mpc-backend-mock-core   = { path = "mpc-backend-mock/core", default-features = false }
mpc-backend-mock-server = { path = "mpc-backend-mock/server", default-features = false }
zeus-axum               = { path = "crates/web", default-features = false }
zeus-cli-common         = { path = "crates/cli-common", default-features = false }
zeus-metrics            = { path = "crates/metrics", default-features = false }
zeus-protobuf-types     = { path = "crates/protobuf-types", default-features = false }

[workspace.lints.rust]
async_fn_in_trait = "allow"

# TODO: deny `unused_crate_dependencies` after https://github.com/rust-lang/rust/issues/95513 being solved
unused_crate_dependencies = "allow"

unstable_features = "warn"

absolute_paths_not_starting_with_crate  = "deny"
deprecated_in_future                    = "deny"
elided_lifetimes_in_paths               = "deny"
explicit_outlives_requirements          = "deny"
ffi_unwind_calls                        = "deny"
keyword_idents                          = { level = "deny", priority = -1 }
let_underscore_drop                     = "deny"
macro_use_extern_crate                  = "deny"
meta_variable_misuse                    = "deny"
missing_abi                             = "deny"
non_ascii_idents                        = "deny"
rust_2021_incompatible_closure_captures = "deny"
rust_2021_incompatible_or_patterns      = "deny"
rust_2021_prefixes_incompatible_syntax  = "deny"
rust_2021_prelude_collisions            = "deny"
single_use_lifetimes                    = "deny"
trivial_casts                           = "deny"
trivial_numeric_casts                   = "deny"
unsafe_code                             = "deny"
unsafe_op_in_unsafe_fn                  = "deny"
unused_extern_crates                    = "deny"
unused_import_braces                    = "deny"
unused_lifetimes                        = "deny"
unused_macro_rules                      = "deny"
unused_qualifications                   = "deny"
unused_results                          = "deny"
variant_size_differences                = "deny"

ambiguous_glob_imports                   = "deny"
ambiguous_glob_reexports                 = "deny"
anonymous_parameters                     = "deny"
array_into_iter                          = "deny"
asm_sub_register                         = "deny"
bad_asm_style                            = "deny"
bare_trait_objects                       = "deny"
break_with_label_and_loop                = "deny"
clashing_extern_declarations             = "deny"
coherence_leak_check                     = "deny"
confusable_idents                        = "deny"
const_evaluatable_unchecked              = "deny"
const_item_mutation                      = "deny"
dangling_pointers_from_temporaries       = "deny"
dead_code                                = "deny"
deprecated                               = "deny"
deprecated_where_clause_location         = "deny"
deref_into_dyn_supertrait                = "deny"
deref_nullptr                            = "deny"
dropping_copy_types                      = "deny"
dropping_references                      = "deny"
drop_bounds                              = "deny"
duplicate_macro_attributes               = "deny"
dyn_drop                                 = "deny"
elided_lifetimes_in_associated_constant  = "deny"
ellipsis_inclusive_range_patterns        = "deny"
exported_private_dependencies            = "deny"
forbidden_lint_groups                    = "deny"
forgetting_copy_types                    = "deny"
forgetting_references                    = "deny"
for_loops_over_fallibles                 = "deny"
function_item_references                 = "deny"
hidden_glob_reexports                    = "deny"
improper_ctypes                          = "deny"
improper_ctypes_definitions              = "deny"
incomplete_features                      = "deny"
inline_no_sanitize                       = "deny"
internal_features                        = "deny"
invalid_doc_attributes                   = "deny"
invalid_from_utf8                        = "deny"
invalid_macro_export_arguments           = "deny"
invalid_nan_comparisons                  = "deny"
invalid_value                            = "deny"
irrefutable_let_patterns                 = "deny"
large_assignments                        = "deny"
late_bound_lifetime_arguments            = "deny"
legacy_derive_helpers                    = "deny"
map_unit_fn                              = "deny"
mixed_script_confusables                 = "deny"
named_arguments_used_positionally        = "deny"
non_camel_case_types                     = "deny"
non_fmt_panics                           = "deny"
non_shorthand_field_patterns             = "deny"
non_snake_case                           = "deny"
non_upper_case_globals                   = "deny"
noop_method_call                         = "deny"
no_mangle_generic_items                  = "deny"
opaque_hidden_inferred_bound             = "deny"
overlapping_range_endpoints              = "deny"
path_statements                          = "deny"
private_bounds                           = "deny"
private_interfaces                       = "deny"
redundant_semicolons                     = "deny"
refining_impl_trait                      = { level = "deny", priority = -1 }
renamed_and_removed_lints                = "deny"
repr_transparent_external_private_fields = "deny"
semicolon_in_expressions_from_macros     = "deny"
special_module_name                      = "deny"
stable_features                          = "deny"
suspicious_double_ref_op                 = "deny"
trivial_bounds                           = "deny"
type_alias_bounds                        = "deny"
tyvar_behind_raw_pointer                 = "deny"
uncommon_codepoints                      = "deny"
unconditional_recursion                  = "deny"
unexpected_cfgs                          = "deny"
ungated_async_fn_track_caller            = "deny"
uninhabited_static                       = "deny"
unknown_lints                            = "deny"
unnameable_test_items                    = "deny"
unreachable_code                         = "deny"
unreachable_patterns                     = "deny"
unstable_name_collisions                 = "deny"
unstable_syntax_pre_expansion            = "deny"
unused_allocation                        = "deny"
unused_assignments                       = "deny"
unused_associated_type_bounds            = "deny"
unused_attributes                        = "deny"
unused_braces                            = "deny"
unused_comparisons                       = "deny"
unused_doc_comments                      = "deny"
unused_features                          = "deny"
unused_imports                           = "deny"
unused_labels                            = "deny"
unused_macros                            = "deny"
unused_must_use                          = "deny"
unused_mut                               = "deny"
unused_parens                            = "deny"
unused_unsafe                            = "deny"
unused_variables                         = "deny"
useless_ptr_null_checks                  = "deny"
while_true                               = "deny"

[workspace.lints.clippy]
future_not_send         = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
multiple_crate_versions = { level = "allow", priority = 1 }

all      = "deny"
cargo    = "deny"
nursery  = "deny"
pedantic = "deny"

[profile.release]
opt-level       = 3
overflow-checks = true

[profile.dev]
opt-level = 0
