[package]
name                   = "notification"
description            = "notification currently only gmail"
version.workspace      = true
authors.workspace      = true
homepage.workspace     = true
repository.workspace   = true
readme.workspace       = true
license.workspace      = true
edition.workspace      = true
rust-version.workspace = true
categories.workspace   = true
keywords.workspace     = true

[dependencies]
async-trait        = "0.1"
base64             = "0.22"
google-cloud-auth  = { version = "0.17" }
google-cloud-token = "0.1"
lettre             = { version = "0.11", default-features = false, features = ["builder"] }
reqwest            = { version = "0.12", features = ["json"] }
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
snafu              = "0.8"
tracing            = "0.1"

[dev-dependencies]
tokio              = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
