[package]
name                   = "mpc-backend-mock-core"
description            = "MPC Backend Mock library"
version.workspace      = true
authors.workspace      = true
homepage.workspace     = true
repository.workspace   = true
readme.workspace       = true
license.workspace      = true
edition.workspace      = true
rust-version.workspace = true
categories.workspace   = true
keywords.workspace     = true
publish.workspace      = true

[dependencies]
serde      = { workspace = true }
serde_with = { workspace = true }

sqlx = { workspace = true, features = [
  "chrono",
  "ipnetwork",
  "json",
  "macros",
  "migrate",
  "postgres",
  "runtime-tokio",
  "tls-rustls",
  "uuid",
] }

eris-bitcoin-ext                    = { workspace = true }
eris-bitcoin-rpc-client             = { workspace = true }
solana-account-decoder-client-types = { workspace = true }
solana-sdk                          = { workspace = true }
zpl-rpc-client                      = { workspace = true }

axum        = { workspace = true }
chrono      = { workspace = true }
directories = { workspace = true }
http        = { workspace = true }
indexmap    = { workspace = true }
semver      = { workspace = true }
snafu       = { workspace = true }
tracing     = { workspace = true }
utoipa      = { workspace = true, features = ["axum_extras", "chrono", "uuid", "yaml", "macros"] }
uuid        = { workspace = true, features = ["serde", "v4"] }

zeus-axum       = { workspace = true }
zeus-cli-common = { workspace = true }

[lints]
# workspace = true
